--- a/ElevenNote.Models/ElevenNote.Models.csproj
+++ b/ElevenNote.Models/ElevenNote.Models.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="11NoteModels\NoteCreate.cs" />
     <Compile Include="11NoteModels\NoteDetail.cs" />
+    <Compile Include="11NoteModels\NoteEdit.cs" />
     <Compile Include="11NoteModels\NoteListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
