--- a/ElevenNote.Data/ElevenNote.Data.csproj
+++ b/ElevenNote.Data/ElevenNote.Data.csproj
@@ -84,13 +84,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Category.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202111281735385_InitialCreate.cs" />
+    <Compile Include="Migrations\202111281735385_InitialCreate.Designer.cs">
+      <DependentUpon>202111281735385_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202112242155404_NoteCreate.cs" />
+    <Compile Include="Migrations\202112242155404_NoteCreate.Designer.cs">
+      <DependentUpon>202112242155404_NoteCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202111281735385_InitialCreate.resx">
+      <DependentUpon>202111281735385_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202112242155404_NoteCreate.resx">
+      <DependentUpon>202112242155404_NoteCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
