--- a/ElevenNote.Models/ElevenNote.Models.csproj
+++ b/ElevenNote.Models/ElevenNote.Models.csproj
@@ -58,11 +58,15 @@
     <Compile Include="11NoteModels\NoteDetail.cs" />
     <Compile Include="11NoteModels\NoteEdit.cs" />
     <Compile Include="11NoteModels\NoteListItem.cs" />
+    <Compile Include="11NoteModels\NoteShuffle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="11CategoryModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
